tests/baselines/reference/parserIndexMemberDeclaration8.errors.txt
tests/cases/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration8.ts(2,4): error TS1145: Modifiers not permitted on index signature members.


==== tests/cases/conformance/parser/ecmascript5/IndexMemberDeclarations/parserIndexMemberDeclaration8.ts (1 errors) ====
    class C {
       private [x: string]: string;
       ~~~~~~~
!!! error TS1145: Modifiers not permitted on index signature members.
    }